Bug 489919 - Prefer usage of Integer.valueOf for org.eclipse.runtime test and tools plug-ins
Change-Id: If416ecf1de1b2a9f88d8c401ca132e48cb5b54dd