@@ -96,7 +96,7 @@ public class ExpressionTests extends TestCase {
 		assertEquals("007", Expressions.convertArgument("'007'")); //$NON-NLS-1$ //$NON-NLS-2$
 		assertEquals(Boolean.TRUE, Expressions.convertArgument("true")); //$NON-NLS-1$
 		assertEquals(Boolean.FALSE, Expressions.convertArgument("false")); //$NON-NLS-1$
-		assertEquals(new Integer(100), Expressions.convertArgument("100")); //$NON-NLS-1$
+		assertEquals(Integer.valueOf(100), Expressions.convertArgument("100")); //$NON-NLS-1$
 		assertEquals(new Float(1.7f), Expressions.convertArgument("1.7")); //$NON-NLS-1$
 	}
 
