@@ -162,57 +162,57 @@ public class ActivationInjectionTest {
 		IEclipseContext rootContext = EclipseContextFactory.create("root");
 
 		IEclipseContext child1 = rootContext.createChild("child1");
-		child1.set(Integer.class, new Integer(1));
+		child1.set(Integer.class, Integer.valueOf(1));
 		IEclipseContext child11 = child1.createChild("child11");
-		child11.set(Integer.class, new Integer(2));
+		child11.set(Integer.class, Integer.valueOf(2));
 		IEclipseContext child12 = child1.createChild("child12");
-		child12.set(Integer.class, new Integer(3));
+		child12.set(Integer.class, Integer.valueOf(3));
 
 		IEclipseContext child2 = rootContext.createChild("child2");
-		child2.set(Integer.class, new Integer(4));
+		child2.set(Integer.class, Integer.valueOf(4));
 		IEclipseContext child21 = child2.createChild("child21");
-		child21.set(Integer.class, new Integer(5));
+		child21.set(Integer.class, Integer.valueOf(5));
 		IEclipseContext child22 = child2.createChild("child22");
-		child22.set(Integer.class, new Integer(6));
+		child22.set(Integer.class, Integer.valueOf(6));
 
 		TestInject testObjectRoot = ContextInjectionFactory.make(TestInject.class, rootContext);
 		TestInject testObjectChild1 = ContextInjectionFactory.make(TestInject.class, child1);
 		TestInject testObjectChild2 = ContextInjectionFactory.make(TestInject.class, child2);
 
 		child12.activateBranch();
-		assertEquals(new Integer(3), testObjectRoot.number);
-		assertEquals(new Integer(3), testObjectChild1.number);
-		assertEquals(new Integer(4), testObjectChild2.number);
+		assertEquals(Integer.valueOf(3), testObjectRoot.number);
+		assertEquals(Integer.valueOf(3), testObjectChild1.number);
+		assertEquals(Integer.valueOf(4), testObjectChild2.number);
 
 		child21.activateBranch();
-		assertEquals(new Integer(5), testObjectRoot.number);
-		assertEquals(new Integer(3), testObjectChild1.number);
-		assertEquals(new Integer(5), testObjectChild2.number);
+		assertEquals(Integer.valueOf(5), testObjectRoot.number);
+		assertEquals(Integer.valueOf(3), testObjectChild1.number);
+		assertEquals(Integer.valueOf(5), testObjectChild2.number);
 
 		child21.deactivate();
-		assertEquals(new Integer(4), testObjectRoot.number);
-		assertEquals(new Integer(3), testObjectChild1.number);
-		assertEquals(new Integer(4), testObjectChild2.number);
+		assertEquals(Integer.valueOf(4), testObjectRoot.number);
+		assertEquals(Integer.valueOf(3), testObjectChild1.number);
+		assertEquals(Integer.valueOf(4), testObjectChild2.number);
 
 		child22.activateBranch();
-		assertEquals(new Integer(6), testObjectRoot.number);
-		assertEquals(new Integer(3), testObjectChild1.number);
-		assertEquals(new Integer(6), testObjectChild2.number);
+		assertEquals(Integer.valueOf(6), testObjectRoot.number);
+		assertEquals(Integer.valueOf(3), testObjectChild1.number);
+		assertEquals(Integer.valueOf(6), testObjectChild2.number);
 
 		child11.activateBranch();
-		assertEquals(new Integer(2), testObjectRoot.number);
-		assertEquals(new Integer(2), testObjectChild1.number);
-		assertEquals(new Integer(6), testObjectChild2.number);
+		assertEquals(Integer.valueOf(2), testObjectRoot.number);
+		assertEquals(Integer.valueOf(2), testObjectChild1.number);
+		assertEquals(Integer.valueOf(6), testObjectChild2.number);
 
 		child11.deactivate();
-		assertEquals(new Integer(1), testObjectRoot.number);
-		assertEquals(new Integer(1), testObjectChild1.number);
-		assertEquals(new Integer(6), testObjectChild2.number);
+		assertEquals(Integer.valueOf(1), testObjectRoot.number);
+		assertEquals(Integer.valueOf(1), testObjectChild1.number);
+		assertEquals(Integer.valueOf(6), testObjectChild2.number);
 
 		child1.dispose();
 		child2.activateBranch();
-		assertEquals(new Integer(6), testObjectRoot.number);
-		assertEquals(new Integer(6), testObjectChild2.number);
+		assertEquals(Integer.valueOf(6), testObjectRoot.number);
+		assertEquals(Integer.valueOf(6), testObjectChild2.number);
 	}
 
 }
